Bug squashing is finished in main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1948,7 +1948,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 }
 
 h2 {
-	font-size: 1.5rem;
+	font-size: 15pt;
 }
 
 h3 {
